--- a/css/sign-in-with.css
+++ b/css/sign-in-with.css
@@ -1,42 +1,23 @@
-.hidden {
-  display: none;
-}
-
-.visible {
-  display: initial;
-}
-
-#userinfo img {
-  height: 3rem;
-}
-
-.user-card {
-  box-shadow: 0 0 1rem #777;
-  border-radius: 0.3rem;
+#demo {
   display: flex;
-  flex-direction: column;
+  height: 100vh;
   align-items: center;
-  padding: 1rem;
-  margin: 1rem auto;
-  width: fit-content;
+  justify-content: space-around;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-#userinfo pre {
-  background-color: #ffd7e5;
+.profile {
+  min-width: 20rem;
 }
 
-.btn-passwordless-id {
-  border: 1px solid #aaa;
-  border-radius: 0.3rem;
-  display: inline-block;
-  padding: 0.2rem 0.4rem;
-  background-color: #eee;
+.profile .card-body {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-.btn-passwordless-id:hover {
-  background-color: #ddd;
-}
-
-.btn-passwordless-id img {
-  height: 2rem;
+.profile img {
+  width: 5rem;
+  height: 5rem;
 }
