--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
       
         <p class="text-muted">
-          <a onclick="navigator.share({url:document.URL,title:document.title})"><i class="bi bi-share-fill"></i> Share</a>
+          <a onclick="navigator.share({url:document.URL,title:document.title})"><i class="fa fa-share-alt"></i> Share</a>
           &nbsp&nbsp - &nbsp&nbsp
           <a title="Edit this page on GitHub" href="{{ site.github.repository_url }}/edit/{{ site.github.source.branch }}/{{ page.path }}" class="text_muted">Edit page</a>
         </p>
