--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,8 @@
         <p class="text-muted">
           <a onclick="navigator.share({url:document.URL,title:document.title})"><i class="fa fa-share-alt"></i> Share</a>
           &nbsp&nbsp - &nbsp&nbsp
-          <a title="Edit this page on GitHub" href="{{ site.github.repository_url }}/edit/{{ site.github.source.branch }}/{{ page.path }}" class="text_muted">Edit page</a>
+          <a title="Edit this page on GitHub" href="{{ site.github.repository_url }}/edit/{{ site.github.source.branch }}/{{ page.path }}" class="text_muted">
+            <i class="fa fa-pencil"></i> Edit page</a>
         </p>
       </div>
     </div>
