--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
       
-        <p class="text-muted">
-          <a onclick="navigator.share({url:document.URL,title:document.title})"><i class="fa fa-share-alt"></i> Share</a>
+        <p class="text-muted text-center">
+          <a href="#" onclick="navigator.share({url:document.URL,title:document.title})"><i class="fa fa-share-alt"></i> Share</a>
           &nbsp&nbsp - &nbsp&nbsp
-          <a title="Edit this page on GitHub" href="{{ site.github.repository_url }}/edit/{{ site.github.source.branch }}/{{ page.path }}" class="text_muted">
+          <a title="Edit this page on GitHub" href="{{ site.github.repository_url }}/edit/{{ site.github.source.branch }}/{{ page.path }}">
             <i class="fa fa-pencil"></i> Edit page</a>
         </p>
       </div>
